--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -18,6 +18,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:hint="@string/login_account_hint"
         android:gravity="center"
         android:textSize="24sp"
@@ -30,6 +31,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:hint="@string/login_password_hint"
         android:gravity="center"
         android:textSize="24sp"
@@ -40,6 +42,15 @@
         android:id="@+id/edit_password"
         android:text=""/>
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/save_info"
+        android:text="@string/save_info"
+        android:textSize="15sp"
+        tools:ignore="RtlSymmetry" />
+
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
@@ -48,14 +59,6 @@
         android:layout_marginHorizontal="100sp"
         android:layout_marginTop="15sp"
         android:text="@string/login_button" />
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/message_1"/>-->
 
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/code_1"/>-->
 
 </LinearLayout>
