--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/add_item"
-        android:title="@string/add"/>
-    <item
-        android:id="@+id/remove_item"
-        android:title="@string/remove"/>
+        android:id="@+id/log_out"
+        android:title="@string/log_out"/>
 </menu>
